# kinect-indie

./: README.md  main.py  pyproject.toml
kinect_indie/controller/: main.py
kinect_indie/model/: CameraControl.py  IModelo.py  YOLO.py  camera_control.py
kinect_indie/services/: GameService.py  front_app.py  game_service.py
